2008-09-18  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/37456
	* tree-ssa-reassoc.c (build_and_add_sum): If the stmt we
	want to insert after ends a BB insert on the single fallthru
	outgoing edge.

	* testsuite/g++.dg/torture/pr37456.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140449 138bc75d-0d04-0410-961f-82ee72b054a4